<resources>
    <string name="app_name">WOMS Tool</string>
    <string name="action_settings">Settings</string>
    <string name="Date">Datum: </string>
    <string name="Objekt">Objekt: </string>
    <string name="AuftrNr">Auftragsnummer: </string>
    <string name="RNr">Raumnummer: </string>
    <string name="Mngl">Mangel: </string>
    <string name="Descr">Beschreibung: </string>
    <string name="Aufnehmer">Aufgenommen von: </string>
    <string name="Prio">Priorität: </string>
    <string name="AuftrDatum">Auftragsdatum: </string>
    <string name="Bearbeiter">zu bearbeiten von: </string>
    <string name="gepRepDauer">geplante Reparaturdauer: </string>
    <string name="gepRepDatum">geplantes Reparaturdatum: </string>
    <string name="btnBild">Bild hinzufügen..</string>
    <string name="RepDauer">Reparaturdauer: </string>
    <string name="MatBed">Materialbedarf: </string>
    <string name="HMeister">Hausmeister: </string>
    <string name="gepMatBed">geplanter Materialbedarf:</string>
    <string name="Anlegen">Auftrag anlegen</string>
    <string name="Login">Login</string>
    <string name="MangelArt">Art des Mangels: </string>
    <string name="AuftrAns">Aufträge ansehen</string>
    <string name="AuftrNew">Neuer Auftrag</string>
    <string name="sani">Sanitär: </string>
    <string name="elektrik">Elektrik: </string>
    <string name="zimmer">Bewohnerzimmer: </string>
    <string name="küche">Küche: </string>
    <string name="defekt"> defekt</string>
    <string name="tausch"> muss ausgetauscht werden</string>
    <string name="fehlt"> fehlt</string>
    <string name="opt">optional: </string>


</resources>
