<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AuftrDatum"
        android:id="@+id/txtAuftrDatum"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="46dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AuftrNr"
        android:id="@+id/txtAuftrNr"
        android:layout_below="@+id/txtAuftrDatum"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RNr"
        android:id="@+id/txtRaumNr"
        android:layout_below="@+id/txtAuftrNr"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Descr"
        android:id="@+id/txtBeschr"
        android:layout_below="@+id/txtRaumNr"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Objekt"
        android:id="@+id/txtObjekt"
        android:layout_marginEnd="377dp"
        android:layout_alignTop="@+id/txtAuftrDatum"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Mngl"
        android:id="@+id/txtMangel"
        android:layout_below="@+id/txtObjekt"
        android:layout_alignStart="@+id/txtObjekt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Prio"
        android:id="@+id/txtPrio"
        android:layout_alignTop="@+id/txtRaumNr"
        android:layout_alignStart="@+id/txtMangel" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Aufnehmer"
        android:id="@+id/txtAufnehmer"
        android:layout_below="@+id/txtBeschr"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/HMeister"
        android:id="@+id/txtHausmeister"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/txtAufnehmer"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gepRepDatum"
        android:id="@+id/txtRepDate"
        android:layout_below="@+id/txtGepDauer"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gepRepDauer"
        android:id="@+id/txtGepDauer"
        android:layout_marginTop="72dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtHausmeister" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/gepMatBed"
        android:id="@+id/txtMatbedarf"
        android:layout_alignBottom="@+id/spinnerHmeister"
        android:layout_alignStart="@+id/editMatbedarf" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editMatbedarf"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/txtPrio"
        android:layout_marginStart="53dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Auftrag zuweisen"
        android:id="@+id/btnZuweisen"
        android:layout_alignParentBottom="true"
        android:onClick="zuweisung"
        android:layout_toStartOf="@+id/txtMatbedarf" />

    <Spinner
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/spinnerHmeister"
        android:entries="@array/Hmeister"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/txtHausmeister"
        android:layout_toEndOf="@+id/txtAuftrDatum" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Datum wählen"
        android:id="@+id/btnDatePicker"
        android:onClick="showDatePickerDialog"
        android:layout_above="@+id/btnZuweisen"
        android:layout_alignEnd="@+id/txtAufnehmer" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/txtRepDatum"
        android:layout_alignBottom="@+id/txtRepDate"
        android:layout_toEndOf="@+id/spinnerHmeister" />


</RelativeLayout>