<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Date"
        android:id="@+id/txtDatum"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextClock
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:id="@+id/textClock"
        android:layout_marginStart="83dp"
        android:layout_alignBottom="@+id/txtDatum"
        android:layout_toEndOf="@+id/txtDatum" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Objekt"
        android:id="@+id/txtObjekt"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Objektname"
        android:id="@+id/txtObjName"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/txtObjekt"
        android:layout_marginStart="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/AuftrNr"
        android:id="@+id/txtAuftrag"
        android:layout_below="@+id/txtDatum"
        android:layout_alignParentStart="true"
        android:layout_marginTop="67dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="0001"
        android:id="@+id/txtNr"
        android:layout_alignTop="@+id/txtAuftrag"
        android:layout_toEndOf="@+id/txtAufgenommen" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/RNr"
        android:id="@+id/txtRaum"
        android:layout_below="@+id/txtMangel"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:id="@+id/inRaum"
        android:autoText="false"
        android:editable="true"
        android:text="2.34"
        android:layout_alignBottom="@+id/txtRaum"
        android:layout_alignEnd="@+id/textClock" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Mngl"
        android:id="@+id/txtMangel"
        android:layout_below="@+id/txtNr"
        android:layout_toStartOf="@+id/txtObjName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Descr"
        android:id="@+id/txtBeschreibung"

        android:layout_below="@+id/radioGroup2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Aufnehmer"
        android:id="@+id/txtAufgenommen"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="90dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Name Mitarbeiter"
        android:id="@+id/txtBearbeiter"
        android:layout_alignTop="@+id/txtAufgenommen"
        android:layout_toStartOf="@+id/txtPrio" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="250dp"
        android:id="@+id/imageView"
        android:layout_alignBottom="@+id/txtBearbeiter"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bild hinzufügen.."
        android:id="@+id/btnBild"
        android:layout_alignTop="@+id/imageView"
        android:layout_toStartOf="@+id/txtBearbeiter" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Prio"
        android:id="@+id/txtPrio"
        android:layout_below="@+id/inRaum"
        android:layout_alignStart="@+id/txtMangel"
        android:layout_marginTop="71dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editBeschreibung"
        android:layout_alignTop="@+id/txtBeschreibung"
        android:layout_alignStart="@+id/inRaum" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAuftragAnlegen"
        android:text="@string/Anlegen"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Belegung beeinträchtigt:"
        android:id="@+id/txtBelegung"
        android:layout_above="@+id/txtNr"
        android:layout_alignEnd="@+id/txtObjName" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/txtBelegung"
        android:layout_toEndOf="@+id/txtBelegung">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="nein"
            android:id="@+id/rBel_Nein"
            android:layout_alignTop="@+id/radioButton5"
            android:layout_toEndOf="@+id/radioButton5"
            android:layout_marginStart="36dp"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ja"
            android:id="@+id/rBel_Ja"
            android:checked="false"
            android:layout_alignTop="@+id/txtBelegung"
            android:layout_toEndOf="@+id/prio2" />
    </RadioGroup>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignTop="@+id/txtPrio"
        android:id="@+id/radioGroup2"
        android:layout_alignStart="@+id/txtObjName">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="hoch"
            android:id="@+id/prio1"
            android:checked="true"
            android:onClick="onRadioButtonClicked"
            android:layout_alignTop="@+id/txtPrio"
            android:layout_alignStart="@+id/spinnerMangel" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="mittel"
            android:id="@+id/prio2"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:layout_above="@+id/txtBeschreibung"
            android:layout_toEndOf="@+id/txtObjName" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="niedrig"
            android:id="@+id/prio3"
            android:checked="false"
            android:onClick="onRadioButtonClicked"
            android:layout_alignTop="@+id/radioButton7"
            android:layout_toEndOf="@+id/radioButton7"
            android:layout_marginStart="37dp" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/btnMgl"
        android:layout_above="@+id/txtPrio"
        android:layout_alignStart="@+id/radioGroup2"
        android:onClick="onClickMangel"/>


</RelativeLayout>
